--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SACHIN</title>
+    <title>SANTHOSH</title>
     <meta name="description" content=" I’m a Data Analyst passionate about transforming raw data into meaningful stories, using analytics to solve problems and drive informed decisions.n technologies and motion design.
     " />
-    <meta name="author" content="SACHIN" />
+    <meta name="author" content="SANTHOSHKUMAR" />
 
-    <meta property="og:title" content="SACHIN Portfolio" />
+    <meta property="og:title" content="SANTHOSH Portfolio" />
   
     <meta property="og:type" content="website" />
 
