Updated project with multiple changes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SACHIN</title>
-    <meta name="description" content=" I’m a Data Analyst passionate about transforming raw data into meaningful stories, using analytics to solve problems and drive informed decisions.n technologies and motion design.
+    <title>SANTHOSH</title>
+    <meta name="description" content=" I’m a Computer Science graduate with a strong interest in frontend development. Skilled in Java, HTML, CSS, JavaScript, and React.js, I enjoy building responsive, user-friendly web applications and have worked on projects like an AI-based CopBot and multiple React-based applications.
+            
     " />
-    <meta name="author" content="SACHIN" />
+    <meta name="author" content="SANTHOSH" />
 
-    <meta property="og:title" content="SACHIN Portfolio" />
-  
+    <meta property="og:title" content="SANTHOSH Portfolio" />
+
     <meta property="og:type" content="website" />
 
     <link rel="icon" href="data:," />
